# tradekit

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/quantkit/stats/: descriptive.py
src/tradekit/: __init__.py
src/tradekit/stats/: descriptive.py
tests/: test_descriptive.py
