[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantkit"
version = "0.0.1"
description = "Blake’s personal quant / execution-research toolkit"
authors = [{name = "Blake"}]
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "numba>=0.59"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-benchmark", "ruff"]

[tool.setuptools.packages.find]
where = ["src"]